--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://new.sax.pl/bookmake_database
-spring.datasource.username=bookmake_root
-spring.datasource.password=winogrono1
+spring.datasource.url=jdbc:mysql://localhost:3306/bookmaker
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
