Add LocalDate and LocalDateTime instead Date

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+########DataBase Properties########
 spring.datasource.url=jdbc:mysql://new.sax.pl/bookmake_database
 spring.datasource.username=bookmake_root
 spring.datasource.password=winogrono1
@@ -5,5 +6,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
-
-?useSSL=false&allowPublicKeyRetrieval=true
+########Consumer Json Properties########
+api.apiAuthToken=bf5c0f84e2214a43978af5da8e98d878
+api.url = http://api.football-data.org/v2/competitions/
