--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ########DataBase Properties########
-spring.datasource.url=jdbc:mysql://new.sax.pl/bookmake_database
-spring.datasource.username=bookmake_root
-spring.datasource.password=winogrono1
+spring.datasource.url=jdbc:mysql://localhost:3306/bookmaker?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -9,3 +9,6 @@ spring.jpa.show-sql=false
 ########Consumer Json Properties########
 api.apiAuthToken=bf5c0f84e2214a43978af5da8e98d878
 api.url = http://api.football-data.org/v2/competitions/
+
+#######Tomcat Server#######
+server.port=8090
