--- a/pom.xml
+++ b/pom.xml
@@ -59,19 +59,6 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
-<!--		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.0.1</version>
-		</dependency>-->
-		<dependency>
-		<!-- update Hibernate dependency on Javassist
-              to 3.23.1 for Java 11 compatibility -->
-		<groupId>org.javassist</groupId>
-		<artifactId>javassist</artifactId>
-		<version>3.23.1-GA</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -82,6 +69,36 @@
 			<artifactId>spring-test</artifactId>
 			<version>RELEASE</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+		<!-- update Hibernate dependency on Javassist
+              to 3.23.1 for Java 10 and 11 compatibility -->
+		<groupId>org.javassist</groupId>
+		<artifactId>javassist</artifactId>
+		<version>3.23.1-GA</version>
+		</dependency>
+<!--
+		Resolve problem with Jaxb in Java10
+-->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.11</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 	</dependencies>
 
